# jax-ingp

./: .gitignore  LICENSE.txt  README.md  flake.nix  pyproject.toml
scripts/: fit_toy_hashgrid.py  render_novel_view.py  render_sdf.py  render_volume.py  viewer.py  visualize_occupancy.py
src/jaxingp/: config.py  types.py
src/jaxingp/data/: image_dataset.py  mesh_dataset.py  nerf_dataset.py  transforms.py  voxel_dataset.py
src/jaxingp/encoding/: hashgrid.py  spherical_harmonics.py
src/jaxingp/geometry/: aabb.py  rays.py
src/jaxingp/nn/: image_network.py  nerf_network.py  sdf_network.py
src/jaxingp/occupancy/: grid.py
src/jaxingp/render/: composite.py  march.py  render.py  sphere_trace.py  volume_march.py
src/jaxingp/training/: checkpoint.py  logging_utils.py  optim.py  train_image.py  train_nerf.py  train_sdf.py
tests/: test_hashgrid_shapes.py  test_march_shapes.py
