[project]
name = "jaxingp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.8",
    "jax[cuda13]>=0.10.2",
    "jaxtyping>=0.3.11",
    "matplotlib>=3.11.0",
    "optax>=0.2.8",
    "pillow>=12.3.0",
    "rtree>=1.4.1",
    "tqdm>=4.68.4",
    "trimesh>=4.12.2",
    "viser>=1.0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaxingp"]

[dependency-groups]
dev = [
    "chex>=0.1.92",
]
